@@ -1,6 +1,3 @@
-# Location of the package profiles.
-profiles="%PROFDIR%"
-
 # Where to find install-log.rc.
 install_log_rc="%INSTALL_LOG_RC%"
 
@@ -16,20 +13,6 @@ logfile=
 
 # Show stdout & stderr on the terminal?  Logging does not affect this.
 terminal_output=yes
-
-# Should install-log be run?
-log_install=yes
-stage0_log_install=no
-stage1_log_install=no
-
-# Should packages be *installed* as root?  (Build user not affected.)
-install_as_root=yes
-stage0_install_as_root=no
-stage1_install_as_root=no
-
-# This variable is used to keep the source files unpacked even after installing
-# packages.  Its use is analogous to the `--leave-files' switch to pkgadd.
-leavefiles=no
 
 # Should we run the packages' testsuites?
 check=no
@@ -48,3 +31,20 @@ cxxflags="$cflags"
 ldflags="-Wl,-s"
 linguas="en"
 lc_all="POSIX"
+
+# Should install-log be run?  Do not change this unless you really know
+# what you are doing!
+log_install=yes
+stage0_log_install=no
+stage1_log_install=no
+
+# Should packages be *installed* as root?  (Build user not affected.)
+# Do not change this unless you really know what you are doing!
+install_as_root=yes
+stage0_install_as_root=no
+stage1_install_as_root=no
+
+# This variable is used to keep the source files unpacked even after installing
+# packages.  Its use is analogous to the `--leave-files' switch to pkgadd.
+# Do not change this unless you really know what you are doing!
+leavefiles=no
