@@ -18,10 +18,9 @@ Packages may be repeated on the commandline and in package dependencies, each
 will only be installed once.
 
 Packages are specified by short name (without a version number), e.g. `bash',
-`gcc'.  Profiles have the same name suffixed by
-.I .pkg
-(`bash.pkg', `gcc.pkg'), and are searched for first in the current working
-directory, then in the profile directory.
+`gcc'.  Profiles have the same name and are located in the
+.I profiles
+directory in the prometheus user's home directory.
 
 .SH OPTIONS
 
@@ -67,9 +66,10 @@ Display the help screen.
 .I stage_number
 .RS
 Specify the stage of a Linux From Scratch build.  Valid stage numbers are 0, 1
-or 2.  Stage 0 is building the initial toolchain; stage 1 is building the GNU C
-Library, rebuilding the toolchain, and building the remaining packages necessary
-to bootstrap an LFS system; stage 2 is building the final system.
+or 2.  Stage 0 is building the initial toolchain (early chapter 5); stage 1 is
+building the GNU C Library, rebuilding the toolchain, and building the remaining
+packages necessary to bootstrap an LFS system (remainder of chapter 5); stage 2
+is building the final system (chapter 6).
 .RE
 
 .BR -V ", " --version
@@ -148,6 +148,11 @@ and removed prior to the failed installation, its files will be restored.
 The global prometheus configuration file.
 .RE
 
+.I "~prometheus/profiles/*"
+.RS
+The package profiles.
+.RE
+
 .SH BUGS
 
 If you think you have found a bug or encounter any weird behaviour, please
@@ -160,11 +165,7 @@ report it to the address below.
 .SH SEE ALSO
 
 .BR install-log (1),
-.BR pkgbuild (1),
-.BR pkgcheck (1),
 .BR pkgget (1),
 .BR pkginfo (1),
-.BR pkginstall (8),
 .BR pkgrm (8),
-.BR pkgunpack (1),
 .BR prometheus.conf (5)
