@@ -15,10 +15,9 @@ installs packages from their build directories, in the order given on the
 commandline.  The built packages are expected to be in the build directory.
 
 Packages are specified by short name (without a version number), e.g. `bash',
-`gcc'.  Profiles have the same name suffixed by
-.I .pkg
-(`bash.pkg', `gcc.pkg'), and are searched for first in the current working
-directory, then in the profile directory.
+`gcc'.  Profiles have the same name and are located in the
+.I profiles
+directory in the prometheus user's home directory.
 
 .BR pkgbuild (1)
 should be invoked to build the packages before running
@@ -127,6 +126,11 @@ and removed prior to the failed installation, its files will be restored.
 .I "%CONFDIR%/%CONFIG%"
 .RS
 The global prometheus configuration file.
+.RE
+
+.I "~prometheus/profiles/*"
+.RS
+The package profiles.
 .RE
 
 .SH BUGS
